k8s/applications/services/download/qui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qui
  labels:
    app.kubernetes.io/name: qui
    app.kubernetes.io/part-of: qbittorrent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qui
    spec:
      containers:
      - image: ghcr.io/autobrr/qui:latest
        name: qui
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "1"
        ports:
        - containerPort: 7476
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 12
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /downloads
        - name: data-downloading
          mountPath: /downloads/downloading
        - name: data-complete
          mountPath: /downloads/complete
        - name: data-complete-deduplicate
          mountPath: /downloads/complete/deduplicate
        - name: config
          mountPath: /config
        - name: secret
          mountPath: "/secret"
          readOnly: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: qbt-vault-downloads-duck-torrents
      - name: data-downloading
        persistentVolumeClaim:
          claimName: qbt-vault-downloads-duck-torrents-downloading
      - name: data-complete
        persistentVolumeClaim:
          claimName: qbt-vault-downloads-duck-torrents-complete
      - name: data-complete-deduplicate
        persistentVolumeClaim:
          claimName: qbt-vault-downloads-duck-torrents-complete-deduplicate
      - name: config
        persistentVolumeClaim:
          claimName: qui-config
      - name: secret
        secret:
          secretName: qui
          items:
            - key: qui_secret
              path: session_secret
            - key: oidc_client_secret
              path: oidc_secret
