k8s/applications/services/download/qui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui-http
spec:
  ports:
  - name: http
    port: 7476
    targetPort: http
  selector:
    app.kubernetes.io/name: qui
