k8s/applications/services/download/qui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: qui
  labels:
    app.kubernetes.io/name: qui
spec:
  rules:
  - host: qbt.net.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qui-http
            port:
              name: http
#  - host: flood.downloads.duck.moe
#    http: *http_rules
  tls:
  - hosts:
    - qbt.net.theleachfamily.me.uk
    secretName: qui-cert
